trying to fix the spacing issue - bullet points

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,32 +620,8 @@ video {
 .w-full {
   width: 100%;
 }
-.min-w-full {
-  min-width: 100%;
-}
-.min-w-0\.5 {
-  min-width: 0.125rem;
-}
-.min-w-64 {
-  min-width: 16rem;
-}
-.min-w-32 {
-  min-width: 8rem;
-}
 .max-w-24 {
   max-width: 6rem;
-}
-.max-w-0\.5 {
-  max-width: 0.125rem;
-}
-.max-w-lg {
-  max-width: 32rem;
-}
-.max-w-md {
-  max-width: 28rem;
-}
-.max-w-\[20rem\] {
-  max-width: 20rem;
 }
 .max-w-\[16rem\] {
   max-width: 16rem;
@@ -743,25 +719,18 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(15 35 67 / var(--tw-border-opacity));
 }
+.bg-\[var\(--base-color\)\] {
+  background-color: var(--base-color);
+}
 .bg-\[var\(--featured-color\)\] {
   background-color: var(--featured-color);
 }
 .bg-\[var\(--text-color\)\] {
   background-color: var(--text-color);
 }
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-\[var\(--featured-color-v-light-blue\)\] {
-  background-color: var(--featured-color-v-light-blue);
-}
-.bg-\[var\(--base-color\)\] {
-  background-color: var(--base-color);
 }
 .bg-cover {
   background-size: cover;
@@ -1054,6 +1023,10 @@ li {
   list-style-position: inside;
   padding-left: 0.5rem;
   font-weight: 100;
+}
+
+::marker {
+  display: inline-block;
 }
 
 /* Italic for color-highlight hack */
